posiGen_FullsendBox/src/objects/REST_API_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Authorization_Header__c</fullName>
        <label>Authorization Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_List_URL_End_Point_Prefix__c</fullName>
        <label>Document List URL End Point Prefix</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_URL_End_Point_Prefix__c</fullName>
        <label>Document URL End Point Prefix</label>
        <type>Url</type>
    </fields>
    <label>REST API Connection Settings</label>
</CustomObject>